Added information and styles for these two contact and first-visit

--- a/pages/first_visit.html
+++ b/pages/first_visit.html
@@ -9,10 +9,13 @@
         to make sure the stuff goes properly-->
 
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/skin_care.css" />
 
     <title>First Visit</title>
     <!-- this shows up in the tab and in a google search -->
-            <link
+    <!-- this shows up in the tab and in a google search -->
+
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="/img/favicon_image/apple-touch-icon.png"
@@ -21,12 +24,14 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/img/favicon_image/favicon-32x32.png"/>
+      href="/img/favicon_image/favicon-32x32.png"
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/img/favicon_image/favicon-16x16.png"/>
+      href="/img/favicon_image/favicon-16x16.png"
+    />
     <link rel="manifest" href="site.webmanifest" />
     <!--This is how I select the favicon in the tabs-->
 
@@ -34,9 +39,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Updock&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
     <!--This is how I pulled font from google fonts there's a corresponding code in my styles sheet-->
-
   </head>
 
   <body>
@@ -49,17 +54,24 @@
             <span></span>
           </button>
           <div class="dropdown-content" id="servicesDropdown">
-        <a href="/index.html">Home</a>
-        <a href="/pages/pricing_services.html">Services and Prices</a>
-        <a href="/pages/training.html">Training</a>
-        <a href="/pages/availability.html">Availability</a>
-        <a href="/pages/skin_care.html">Skin Care</a>
-        <a href="/pages/about.html">About</a>
-        <a href="/pages/contact.html">Contact</a>
-    </div>
+            <a href="/index.html">Home</a>
+            <a href="/pages/pricing_services.html">Services and Prices</a>
+            <a href="/pages/training.html">Training</a>
+            <a href="/pages/availability.html">Availability</a>
+            <a href="/pages/skin_care.html">Skin Care</a>
+            <a href="/pages/about.html">About</a>
+            <a href="/pages/contact.html">Contact</a>
+          </div>
         </div>
 
-        <div class="logo">Daria Aesthetics</div>
+        <div class="logocontainer">
+          <img
+            src="../img/DAlogo2.png"
+            class="logoImage"
+            alt="DariaAesthetics logo"
+          />
+          <div class="logo">Daria Aesthetics</div>
+        </div>
 
         <div class="button_container">
           <a
@@ -70,10 +82,363 @@
             >Book My Appointment</a
           >
         </div>
+        <!--End of top banner-->
       </div>
-      <!--End of top banner-->
+
+      <div class="content_container">
+        <h1 class="aftercare_title">Your First Waxing Experience</h1>
+
+        <div class="intro_text">
+          <p><strong>Welcome to Daria Aesthetics!</strong></p>
+          <p>
+            We're excited to guide you through your first waxing appointment.
+            While it's natural to feel a bit nervous, proper preparation and
+            knowing what to expect will help ensure a comfortable, positive
+            experience. This guide will walk you through everything you need to
+            know!
+          </p>
+        </div>
+
+        <!-- BEFORE YOUR APPOINTMENT -->
+        <h2 class="section_title">How to Prepare Before Your Appointment</h2>
+
+        <h3 class="timeline_header">Hair Length Requirements:</h3>
+
+        <div class="instruction_box">
+          <strong>Stop shaving 2-3 weeks before your appointment:</strong> Your
+          hair needs to be at least ¼ inch long (about the size of a grain of
+          rice) for the wax to grip properly. If hair is too short, it cannot be
+          removed effectively. If you haven't shaved in a while and hair is
+          longer than ½ inch, you can carefully trim it down, but don't go too
+          short!
+        </div>
+
+        <div class="instruction_box">
+          <strong>Avoid tweezing or plucking:</strong> Only shaving should be
+          stopped before waxing. Don't tweeze, thread, or use other hair removal
+          methods that remove hair from the root, as this disrupts the growth
+          cycle.
+        </div>
+
+        <h3 class="timeline_header">24-48 Hours Before:</h3>
+
+        <div class="instruction_box">
+          <strong>Gently exfoliate the area:</strong> Use a mild scrub or
+          exfoliating glove to remove dead skin cells. This helps the wax adhere
+          better and allows for a cleaner removal. Don't over-exfoliate or
+          irritate the skin.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Moisturize your skin:</strong> Keep your skin hydrated with a
+          light, oil-free moisturizer. Well-hydrated skin experiences less
+          discomfort during waxing. However, avoid heavy creams or oils that can
+          create a barrier.
+        </div>
+
+        <div class="warning_box">
+          <h3>Important Medication Information:</h3>
+          <p>
+            If you're using any of the following products, please inform us
+            before your appointment:
+          </p>
+          <ul class="dont_list">
+            <li>
+              <strong>Retinol, Retin-A, or Accutane:</strong> These products
+              increase cell turnover and thin the skin, which can lead to skin
+              lifting or tearing during waxing.
+            </li>
+            <li>
+              <strong>Other prescription topicals:</strong> Certain medications
+              can make your skin more sensitive.
+            </li>
+            <li>
+              <strong>Blood thinners or aspirin:</strong> These can increase
+              sensitivity and bruising.
+            </li>
+          </ul>
+          <p>
+            Please let us know about any skin sensitivities, allergies, or
+            medical conditions during your consultation.
+          </p>
+        </div>
+
+        <h3 class="timeline_header">Day of Your Appointment:</h3>
+
+        <div class="instruction_box">
+          <strong>Shower and cleanse thoroughly:</strong> Make sure the area to
+          be waxed is clean and free of oils, lotions, sweat, makeup, or
+          deodorant. Clean skin is essential for effective waxing and hygiene.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Skip the lotions and oils:</strong> Don't apply any products
+          to the area that will be waxed on the day of your appointment. These
+          create a barrier that prevents the wax from adhering properly.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Wear loose, comfortable clothing:</strong> Choose breathable,
+          loose-fitting clothes made from natural fibers like cotton. This is
+          especially important for bikini, Brazilian, or underarm waxing. Your
+          skin will be sensitive after the treatment, and tight clothing can
+          cause irritation.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Consider taking a pain reliever:</strong> If you're concerned
+          about discomfort, you may take an over-the-counter pain reliever (like
+          Tylenol or Ibuprofen) about 30-60 minutes before your appointment.
+          However, avoid aspirin as it can thin the blood.
+        </div>
+
+        <div class="tip_box">
+          <h3>Timing Your Appointment:</h3>
+          <ul>
+            <li>
+              <strong>Avoid scheduling during your menstrual cycle:</strong>
+              Your skin is more sensitive during this time, which can increase
+              discomfort. Try to schedule your appointment between cycles if
+              possible.
+            </li>
+            <li>
+              <strong>Plan ahead for special events:</strong> If you're waxing
+              for a vacation, wedding, or special occasion, schedule your
+              appointment 2-3 days in advance. This gives any redness or
+              irritation time to subside.
+            </li>
+          </ul>
+        </div>
+
+        <!-- WHAT TO EXPECT -->
+        <h2 class="section_title">What to Expect During Your Appointment</h2>
+
+        <div class="instruction_box">
+          <strong>Warm welcome and consultation:</strong> When you arrive, we'll
+          greet you and guide you to a private treatment room. We'll discuss
+          your preferences, any concerns you have, your skin type, and review
+          your medical history. Feel free to ask any questions! Communication is
+          key to ensuring your comfort.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Privacy and comfort:</strong> Depending on the area being
+          waxed, you may need to partially undress. We provide complete privacy
+          and will ensure you feel comfortable throughout the process. For
+          bikini and Brazilian waxes, you'll undress from the waist down. We
+          remain professional and focused on providing the best service.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Skin preparation:</strong> We'll cleanse the area to remove
+          any remaining oils, lotions, or debris. For certain waxing methods, we
+          may apply a pre-wax oil or powder to protect your skin and ensure
+          optimal results.
+        </div>
+
+        <div class="instruction_box">
+          <strong>The waxing process:</strong> Wax is applied in small sections
+          and then quickly removed, pulling hair from the root. We work
+          efficiently to minimize discomfort while ensuring thorough hair
+          removal. The process typically takes:
+          <ul>
+            <li>Small areas (brows, upper lip): 5-10 minutes</li>
+            <li>Medium areas (underarms, bikini): 15-20 minutes</li>
+            <li>Large areas (legs, Brazilian): 30-60 minutes</li>
+          </ul>
+        </div>
+
+        <div class="instruction_box">
+          <strong>Post-treatment care:</strong> After waxing, we'll apply a
+          soothing product to calm your skin and reduce any redness. We'll also
+          provide personalized aftercare instructions and answer any questions
+          you have.
+        </div>
+
+        <!-- PAIN AND COMFORT -->
+        <h2 class="section_title">Managing Discomfort</h2>
+
+        <div class="intro_text">
+          <p>
+            Let's be honest: waxing can be uncomfortable, especially the first
+            time. However, most clients find it's much more manageable than they
+            expected. Here's what you should know:
+          </p>
+        </div>
+
+        <div class="instruction_box">
+          <strong>It gets easier:</strong> Your first wax may be the most
+          uncomfortable because hair is thicker and the follicles are stronger.
+          With regular waxing (every 3-4 weeks), hair grows back softer, finer,
+          and less dense, making each subsequent appointment more comfortable.
+          Many clients report that their third wax is significantly easier!
+        </div>
+
+        <div class="instruction_box">
+          <strong>Everyone's tolerance is different:</strong> Pain is
+          subjective. What feels uncomfortable to one person may be barely
+          noticeable to another. We work at a pace that's comfortable for you
+          and can take breaks if needed.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Breathing helps:</strong> Deep, slow breathing can
+          significantly reduce discomfort. Try to relax your muscles rather than
+          tensing up, which can make things more painful.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Communication is key:</strong> If you're feeling too much
+          discomfort, let us know! We can adjust our technique, take breaks, or
+          provide additional comfort measures.
+        </div>
+
+        <!-- AFTER YOUR FIRST WAX -->
+        <h2 class="section_title">After Your First Wax</h2>
+
+        <div class="instruction_box">
+          <strong>Expect some redness and sensitivity:</strong> It's completely
+          normal to experience pinkness, slight swelling, or sensitivity for a
+          few hours after your first wax. This should subside within 24 hours.
+          If redness persists beyond 24 hours or you notice unusual reactions,
+          please contact us.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Follow aftercare instructions:</strong> Proper aftercare is
+          essential! Avoid heat, sun, swimming, exercise, and touching the area
+          for 24-48 hours. Apply soothing products like aloe vera gel. For
+          complete aftercare instructions, please visit our
+          <a
+            href="/pages/waxing_aftercare.html"
+            style="color: var(--primary-pink); text-decoration: underline"
+            >Waxing Aftercare Page</a
+          >.
+        </div>
+
+        <div class="instruction_box">
+          <strong>Schedule your next appointment:</strong> For best results and
+          to maintain smooth skin, plan to return every 3-4 weeks. Regular
+          waxing keeps your hair growth cycle synchronized and makes the process
+          progressively more comfortable.
+        </div>
+
+        <!-- COMMON CONCERNS -->
+        <h2 class="section_title">Common First-Timer Questions</h2>
+
+        <div class="warning_box">
+          <h3>Will it hurt?</h3>
+          <p>
+            The level of discomfort varies by individual and the area being
+            waxed. Most people find the anticipation worse than the actual
+            experience. The first wax may be more uncomfortable, but it becomes
+            easier with regular appointments as hair grows back finer.
+          </p>
+        </div>
+
+        <div class="warning_box">
+          <h3>How long will the results last?</h3>
+          <p>
+            Waxing results typically last 3-6 weeks, depending on your
+            individual hair growth cycle. Hair grows back softer and finer than
+            when you shave.
+          </p>
+        </div>
+
+        <div class="warning_box">
+          <h3>Will I get ingrown hairs?</h3>
+          <p>
+            Ingrown hairs can occur, but proper exfoliation and moisturizing
+            between appointments significantly reduces this risk. We'll provide
+            you with tips to prevent ingrown hairs.
+          </p>
+        </div>
+
+        <div class="warning_box">
+          <h3>What if I have sensitive skin?</h3>
+          <p>
+            Please inform us about any skin sensitivities during your
+            consultation. We can recommend specific products and techniques for
+            sensitive skin and will perform a patch test if needed.
+          </p>
+        </div>
+
+        <div class="warning_box">
+          <h3>Can I wax during my period?</h3>
+          <p>
+            While it's possible, we recommend scheduling your appointment
+            between cycles when your skin is less sensitive. If you must wax
+            during your period (for bikini/Brazilian services), please wear a
+            fresh tampon or menstrual cup.
+          </p>
+        </div>
+
+        <div class="warning_box">
+          <h3>What if my hair is uneven?</h3>
+          <p>
+            It's completely normal for hair growth to be uneven during your
+            first wax, especially if you've been shaving. The growth will even
+            out after 2-3 consistent waxing appointments.
+          </p>
+        </div>
+
+        <!-- FINAL TIPS -->
+        <div class="tip_box">
+          <h3>Tips for the Best First Experience:</h3>
+          <ul>
+            <li>
+              Stay hydrated by drinking plenty of water before and after your
+              appointment.
+            </li>
+            <li>
+              Try to relax! Anxiety can heighten discomfort. Listen to music,
+              practice deep breathing, or chat with your esthetician.
+            </li>
+            <li>
+              Don't judge waxing by your first experience. Give it 2-3 sessions
+              before deciding if it's right for you.
+            </li>
+            <li>
+              Trust the professionals. We've performed thousands of waxing
+              services and will guide you through the process with care and
+              expertise.
+            </li>
+            <li>
+              Reward yourself afterward! Treat yourself to something nice after
+              your appointment.
+            </li>
+          </ul>
+        </div>
+
+        <!-- CONTACT -->
+        <div class="intro_text">
+          <h3 style="color: var(--primary-pink); margin-top: 0">
+            Ready to Book Your First Appointment?
+          </h3>
+          <p>
+            We're here to make your first waxing experience as comfortable and
+            positive as possible. If you have any questions or concerns, please
+            don't hesitate to reach out. We look forward to welcoming you to
+            Daria Aesthetics!
+          </p>
+          <p style="text-align: center; margin-top: 20px">
+            <a
+              href="https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg"
+              class="booking_button"
+              target="_blank"
+              rel="noopener"
+              >Book Your First Appointment</a
+            >
+          </p>
+        </div>
+      </div>
+      <!-- End content container -->
     </div>
-    <script src="../js/script.js"></script>
-    <!--this is linking the js file-->
+    <!-- End page -->
+
+    <footer>
+      <p>&copy; 2024 Daria Aesthetics. All rights reserved.</p>
+    </footer>
   </body>
+  <script src="../js/script.js"></script>
 </html>
