--- a/pages/about.html
+++ b/pages/about.html
@@ -12,8 +12,9 @@
         
         <title>About</title>
             <!-- this shows up in the tab and in a google search -->
+    <!-- this shows up in the tab and in a google search -->
 
-<link
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="/img/favicon_image/apple-touch-icon.png"
@@ -40,38 +41,49 @@
       rel="stylesheet"
     />
     <!--This is how I pulled font from google fonts there's a corresponding code in my styles sheet-->
-    </head>
+  </head>
 
-    <body>
-        <div class="page">
-    <div class="top_banner">
-      <div class = "dropdown_container">
-      <button class ="dropdown" onclick="toggleDropdown()">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="dropdown-content" id="servicesDropdown">
-        <a href="/index.html">Home</a>
-        <a href="/pages/pricing_services.html">Services and Prices</a>
-        <a href="/pages/training.html">Training</a>
-        <a href="/pages/availability.html">Availability</a>
-        <a href="/pages/first_visit.html">First Visit</a>
-        <a href="/pages/skin_care.html">Skin Care</a>
-        <a href="/pages/contact.html">Contact</a>
-    </div>
+  <body>
+    <div class="page">
+      <div class="top_banner">
+        <div class="dropdown_container">
+          <button class="dropdown" onclick="toggleDropdown()">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <div class="dropdown-content" id="servicesDropdown">
+            <a href="/index.html">Home</a>
+            <a href="/pages/pricing_services.html">Services and Prices</a>
+            <a href="/pages/training.html">Training</a>
+            <a href="/pages/availability.html">Availability</a>
+            <a href="/pages/first_visit.html">First Visit</a>
+            <a href="/pages/skin_care.html">Skin Care</a>
+            <a href="/pages/contact.html">Contact</a>
+          </div>
+        </div>
+
+        <div class="logocontainer">
+          <img
+            src="../img/DAlogo2.png"
+            class="logoImage"
+            alt="DariaAesthetics logo"
+          />
+          <div class="logo">Daria Aesthetics</div>
+        </div>
+
+        <div class="button_container">
+          <a
+            href="https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg"
+            class="booking_button"
+            target="_blank"
+            rel="noopener"
+            >Book My Appointment</a
+          >
+        </div>
+        <!--End of top banner-->
       </div>
-
-      <div class="logo">Daria Aesthetics</div>
-
-      <div class="button_container">
-        <a href="https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg" class = "booking_button" target="_blank" rel="noopener">Book My Appointment</a>
-
-        </div> 
-    </div> <!--End of top banner-->
-    
-       <script src="../js/script.js"></script>
-    <!--this is linking the js file-->
-    </body>
-
+    </div>
+  </body>
+  <script src="../js/script.js"></script>
 </html>
