--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,8 @@
         to make sure the stuff goes properly-->
 
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/calendar.css" />
+    <link rel="stylesheet" href="../css/contact.css" />
 
     <title>Contact</title>
     <!-- this shows up in the tab and in a google search -->
@@ -51,15 +53,22 @@
           <div class="dropdown-content" id="servicesDropdown">
         <a href="/index.html">Home</a>
         <a href="/pages/pricing_services.html">Services and Prices</a>
-        <a href="/pages/training.html">Training</a>
-        <a href="/pages/availability.html">Availability</a>
-        <a href="/pages/first_visit.html">First Visit</a>
-        <a href="/pages/skin_care.html">Skin Care</a>
-        <a href="/pages/about.html">About</a>
+            <a href="/pages/training.html">Training</a>
+            <a href="/pages/availability.html">Availability</a>
+            <a href="/pages/first_visit.html">First Visit</a>
+            <a href="/pages/skin_care.html">Skin Care</a>
+            <a href="/pages/about.html">About</a>
     </div>
         </div>
 
-        <div class="logo">Daria Aesthetics</div>
+        <div class="logocontainer">
+          <img
+            src="../img/DAlogo2.png"
+            class="logoImage"
+            alt="DariaAesthetics logo"
+          />
+          <div class="logo">Daria Aesthetics</div>
+        </div>
 
         <div class="button_container">
           <a
@@ -73,7 +82,101 @@
       </div>
       <!--End of top banner-->
     </div>
+
+         <div class="contact_container">
+        <h1 class="contact_title">Get In Touch</h1>
+        <p class="contact_subtitle">
+          Have questions or ready to book your appointment? I'd love to hear from you! 
+          Connect with me on Instagram and I'll get back to you as soon as possible.
+        </p>
+
+        <div class="contact_grid">
+          <!-- Booking Card -->
+          <div class="contact_card">
+            <div class="contact_card_icon">📅</div>
+            <h2 class="contact_card_title">Book Online</h2>
+            <div class="contact_card_info">
+              <p>Schedule your appointment online.</p>
+              <a
+                href="https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg"
+                class="social_link"
+                target="_blank"
+                rel="noopener"
+              >
+                Book Now
+              </a>
+            </div>
+          </div>
+
+          <!-- Location Card -->
+          <div class="contact_card">
+            <div class="contact_card_icon">📍</div>
+            <h2 class="contact_card_title">My Address</h2>
+            <div class="contact_card_info">
+              <p>
+                889 Carnarvon St<br />
+                Office 217D<br />
+                New Westminster, BC<br />
+                V3M 6R4
+              </p>
+            </div>
+          </div>
+
+          <!-- Instagram Card -->
+          <div class="contact_card">
+            <div class="contact_card_icon">📱</div>
+            <h2 class="contact_card_title">Follow Me</h2>
+            <div class="contact_card_info">
+              <p>Stay updated with the latest services, tips, and special offers!</p>
+              <a
+                href="https://www.instagram.com/_daria.aesthetics_/"
+                class="social_link"
+                target="_blank"
+                rel="noopener"
+              >
+                @_daria.aesthetics_
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Google Maps Section -->
+        <div class="map_section">
+          <h2 class="map_title">Find Me Here</h2>
+          <div class="map_container">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2604.0238445838857!2d-122.91478492345698!3d49.20367797138624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5485d84e7e3e3e3d%3A0x5e5e5e5e5e5e5e5e!2s889%20Carnarvon%20St%2C%20New%20Westminster%2C%20BC%20V3M%206R4!5e0!3m2!1sen!2sca!4v1234567890123!5m2!1sen!2sca"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+
+        <!-- Hours Section -->
+        <div class="weekly_schedule" id="studio-schedule" aria-live="polite">
+        <div class="ws-header">
+          <h2 class="ws-title">My studio hours</h2>
+          <span class="ws-badge" id="ws-status">Checking…</span>
+        </div>
+
+        <p class="ws-sub" id="ws-subline"></p>
+
+        <ul class="ws-list" id="ws-list">
+          <!-- filled by JS -->
+        </ul>
+      </div>
+      </div>
+      <!-- End contact container -->
+    </div>
+    <!-- End page -->
+
+    <footer>
+      <p>&copy; 2024 Daria Aesthetics. All rights reserved.</p>
+    </footer>
+
     <script src="../js/script.js"></script>
     <!--this is linking the js file-->
   </body>
 </html>
+
