--- a/pages/training.html
+++ b/pages/training.html
@@ -60,7 +60,15 @@
     </div>
       </div>
 
-      <div class="logo">Daria Aesthetics</div>
+      <div class="logocontainer">
+          <img
+            src="../img/DAlogo2.png"
+            class="logoImage"
+            alt="DariaAesthetics logo"
+          />
+          <div class="logo">Daria Aesthetics</div>
+        </div>
+
 
       <div class="button_container">
         <a href="https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg" class = "booking_button" target="_blank" rel="noopener">Book My Appointment</a>
@@ -70,5 +78,5 @@
            <script src="../js/script.js"></script>
     <!--this is linking the js file-->
     </body>
-
+<script src="../js/script.js"></script>
 </html>
