Fixed a some linkes that weren't working.

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
           </button>
           <div class="dropdown-content" id="servicesDropdown">
             <a href="pages/pricing_services.html">Services and Prices</a>
-            <a href="pages/training.html">Training</a>
-            <a href="pages/availability.html">Availability</a>
-            <a href="pages/first_visit.html">First Visit</a>
-            <a href="pages/skin_care.html">Skin Care</a>
-            <a href="pages/about.html">About</a>
-            <a href="pages/contact.html">Contact</a>
+            <a href="/pages/training.html">Training</a>
+            <a href="/pages/availability.html">Availability</a>
+            <a href="/pages/first_visit.html">First Visit</a>
+            <a href="/pages/skin_care.html">Skin Care</a>
+            <a href="/pages/about.html">About</a>
+            <a href="/pages/contact.html">Contact</a>
           </div>
         </div>
 
