made a separate js file for the calendar function

--- a/pages/availability.html
+++ b/pages/availability.html
@@ -109,5 +109,6 @@
     </div>
   </body>
   <script src="../js/script.js"></script>
+  <script src="../js/calendar.js"></script>
   <!--this is linking the js file-->
 </html>
