--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,22 +44,7 @@
   <body>
     <div class="page">
       <div class="top_banner">
-        <div class="dropdown_container">
-          <button class="dropdown" onclick="toggleDropdown()">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-          <div class="dropdown-content" id="servicesDropdown">
-        <a href="/index.html">Home</a>
-        <a href="/pages/pricing_services.html">Services and Prices</a>
-            <a href="/pages/training.html">Training</a>
-            <a href="/pages/availability.html">Availability</a>
-            <a href="/pages/first_visit.html">First Visit</a>
-            <a href="/pages/skin_care.html">Skin Care</a>
-            <a href="/pages/about.html">About</a>
-    </div>
-        </div>
+        <div id="menu-container"></div>
 
         <div class="logocontainer">
           <img
@@ -175,7 +160,8 @@
       <p>&copy; 2024 Daria Aesthetics. All rights reserved.</p>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/calendar.js"></script>
     <!--this is linking the js file-->
   </body>
 </html>
