--- a/pages/first_visit.html
+++ b/pages/first_visit.html
@@ -47,22 +47,7 @@
   <body>
     <div class="page">
       <div class="top_banner">
-        <div class="dropdown_container">
-          <button class="dropdown" onclick="toggleDropdown()">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-          <div class="dropdown-content" id="servicesDropdown">
-            <a href="/index.html">Home</a>
-            <a href="/pages/pricing_services.html">Services and Prices</a>
-            <a href="/pages/training.html">Training</a>
-            <a href="/pages/availability.html">Availability</a>
-            <a href="/pages/skin_care.html">Skin Care</a>
-            <a href="/pages/about.html">About</a>
-            <a href="/pages/contact.html">Contact</a>
-          </div>
-        </div>
+        <div id="menu-container"></div>
 
         <div class="logocontainer">
           <img
@@ -412,7 +397,7 @@
 
         <!-- CONTACT -->
         <div class="intro_text">
-          <h3 style="color: var(--primary-pink); margin-top: 0">
+          <h3 style="color: var(--text-color); margin-top: 0">
             Ready to Book Your First Appointment?
           </h3>
           <p>
@@ -440,5 +425,5 @@
       <p>&copy; 2024 Daria Aesthetics. All rights reserved.</p>
     </footer>
   </body>
-  <script src="../js/script.js"></script>
+  <script src="/js/script.js"></script>
 </html>
