--- a/pages/pricing_services.html
+++ b/pages/pricing_services.html
@@ -46,22 +46,7 @@
   <body>
     <div class="page">
       <div class="top_banner">
-        <div class="dropdown_container">
-          <button class="dropdown" onclick="toggleDropdown()">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-          <div class="dropdown-content" id="servicesDropdown">
-            <a href="/index.html">Home</a>
-            <a href="/pages/training.html">Training</a>
-            <a href="/pages/availability.html">Availability</a>
-            <a href="/pages/first_visit.html">First Visit</a>
-            <a href="/pages/skin_care.html">Skin Care</a>
-            <a href="/pages/about.html">About</a>
-            <a href="/pages/contact.html">Contact</a>
-          </div>
-        </div>
+        <div id="menu-container"></div>
 
         <div class="logocontainer">
           <img
@@ -93,5 +78,5 @@
     <script src="../js/pricing.js"></script>
     <!--this is linking the js file-->
   </body>
-  <script src="../js/script.js"></script>
+  <script src="/js/script.js"></script>
 </html>
