Added a footer and button as a component. updated the corresponding html and js

--- a/pages/index.html
+++ b/pages/index.html
@@ -56,15 +56,7 @@
           <div class="logo">Daria Aesthetics</div>
         </div>
 
-        <div class="button_container">
-          <a
-            href="https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg"
-            class="booking_button"
-            target="_blank"
-            rel="noopener"
-            >Book My Appointment</a
-          >
-        </div>
+        <div id="booking-button-container"></div>
       </div>
 
       <img
@@ -74,8 +66,7 @@
       says /'Yay its Waxing Day/' a picture of a girl and a waxing equipment."
       />
     </div>
-
-    <!--this is linking the js file-->
+    <div id="footer-container"></div>
   </body>
   <script src="/js/script.js"></script>
   <footer></footer>
