--- a/pages/availability.html
+++ b/pages/availability.html
@@ -59,15 +59,7 @@
           <div class="logo">Daria Aesthetics</div>
         </div>
 
-        <div class="button_container">
-          <a
-            href="https://book.squareup.com/appointments/m3f3pdzzxv89y4/location/L8YJN97A2A889/services?fbclid=PAb21jcANx-SFleHRuA2FlbQIxMAABpxxA6OyYUd1E3Jr-KQ2EOXSF18-lqARcRTQa-zbOEiDSjn4-EcmyQ1J9XAoI_aem_t0ZKJ7OH0j-WcqFb1MC4Bg"
-            class="booking_button"
-            target="_blank"
-            rel="noopener"
-            >Book My Appointment</a
-          >
-        </div>
+        <div id="booking-button-container"></div>
       </div>
       <!--End of top banner-->
 
@@ -79,6 +71,7 @@
         </div>
       </div>
     </div>
+    <div id="footer-container"></div>
   </body>
   <script src="/js/script.js"></script>
   <script src="/js/calendar.js"></script>
