Renamed and reorganized code location

--- a/pages/book_now.html
+++ b/pages/book_now.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="../css/styles.css" />
     <!--this is linking the css style sheet to this document-->
-    <link rel="stylesheet" href="../css/calendar.css" />
+    <link rel="stylesheet" href="../css/book_now.css" />
     <!--this is linking the calendar css style sheet-->
 
     <title>Availability</title>
@@ -74,6 +74,6 @@
     <div id="footer-container"></div>
   </body>
   <script src="/js/script.js"></script>
-  <script src="/js/calendar.js"></script>
+  <script src="/js/book_now.js"></script>
   <!--this is linking the js file-->
 </html>
