--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@
         to make sure the stuff goes properly-->
 
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/calendar.css" />
+    <link rel="stylesheet" href="../css/book_now.css" />
     <link rel="stylesheet" href="../css/contact.css" />
 
     <title>Contact</title>
@@ -151,7 +151,7 @@
     <div id="footer-container"></div>
 
     <script src="/js/script.js"></script>
-    <script src="/js/calendar.js"></script>
+    <!-- <script src="/js/book_now.js"></script> -->
     <!--this is linking the js file-->
   </body>
 </html>
